Fix nav text align right on smaller screens

--- a/app/assets/stylesheets/layout/_nav.scss
+++ b/app/assets/stylesheets/layout/_nav.scss
@@ -1,5 +1,7 @@
 .nav {
-  text-align: right;
+  @include breakpoint("large") {
+    text-align: right;
+  }
 }
 
 .nav__list {
